--- a/recipes/taco-soup.html
+++ b/recipes/taco-soup.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Odin Recipes - Taco Soup</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/taco-soup.html">Taco Soup</a>
+    <h1>Taco Soup</h1>
 </body>
 </html>
