Add recipes to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/taco-soup.html">Taco Soup</a>
+    <ul>
+        <li><a href="recipes/taco-soup.html">Taco Soup</a></li>
+        <li><a href="recipes/cucumber-salad.html">Cucumber Salad</a></li>
+        <li><a href="recipes/mashed-potato.html">Mashed Potatoes</a></li>
+    </ul>
 </body>
 </html>
