--- a/recipes/taco-soup.html
+++ b/recipes/taco-soup.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes - Taco Soup</title>
-</head>
-<body>
-    <h1>Taco Soup</h1>
-    <img src="../images/taco-soup-img.jpg" alt="Heart bowl of taco soup" height="250"/>
-    <h2>The Best Taco Soup Recipe</h2>
-    <p>We love all foods Mexican around here. Whether it’s Chicken Fajitas, Fish Tacos, or even Ceviche, Mexican-inspired recipes are always on rotation. 
-        This taco soup is a great substitute for Taco Tuesday when you want tacos yet something hot and satisfying</p>
-    <p>This hearty Taco Soup recipe bursts with crave-worthy Mexican flavors, and then it comes together in just 30 minutes. After only 10 minutes of prep work, 
-        it’s easy to serve up a warm bowl of this soup loaded with ground beef, tomatoes, corn, beans, and a quick homemade taco seasoning.</p>
-    <a href="https://natashaskitchen.com/easy-taco-soup-recipe/" target="_blank" rel="noopener noreferrer">Source: Natasha Kravchuk with Natasha's Kitchen</a>
+    <head>
+        <link rel="stylesheet" href="../styles.css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Odin Recipes - Taco Soup</title>
+    </head>
+    <body>
+        <h1>Taco Soup</h1>
+        <img src="../images/taco-soup-img.jpg" alt="Heart bowl of taco soup" height="250"/>
+        <h2>The Best Taco Soup Recipe</h2>
+        <p>We love all foods Mexican around here. Whether it’s Chicken Fajitas, Fish Tacos, or even Ceviche, Mexican-inspired recipes are always on rotation. 
+            This taco soup is a great substitute for Taco Tuesday when you want tacos yet something hot and satisfying</p>
+        <p>This hearty Taco Soup recipe bursts with crave-worthy Mexican flavors, and then it comes together in just 30 minutes. After only 10 minutes of prep work, 
+            it’s easy to serve up a warm bowl of this soup loaded with ground beef, tomatoes, corn, beans, and a quick homemade taco seasoning.</p>
+        <a href="https://natashaskitchen.com/easy-taco-soup-recipe/" target="_blank" rel="noopener noreferrer">Source: Natasha Kravchuk with Natasha's Kitchen</a>
 
-    <h2>Ingredients</h2>
-    <ul>
-        <li>1 pound lean group beef</li>
-        <li>1 Tbsp olive oil</li>
-        <li>1 medium onion, finely diced</li>
-        <li>1/2 red bell pepper, diced</li>
-        <li>1/2 green bell pepper, diced</li>
-        <li>3 garlic cloves, minced</li>
-        <li>2 Tbsp Taco Seasoning</li>
-        <li>16 oz can beans, drained (kidney or pinto)</li>
-        <li>1 cup corn, canned, freshly or frozen</li>
-        <li>1 1/2 cups tomatoes, diced, from about 1 lb fresh tomatoes</li>
-        <li>2 cups beef broth</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Make Taco Seasoning or measure out 2 Tbsp of storebought taco seasoning from 1 packet.</li>
-        <li>In a Dutch oven, heat oil. Once hot, add the ground beef, onion, and bell peppers and saute until the beef is browned, breaking it up with a spatula as you cook. Spoon out any excess fat.</li>
-        <li>Add garlic and Taco Seasoning, and stir for another minute.</li>
-        <li>Add beans, corn, tomatoes, and broth. Bring to a boil then reduce the heat to low, cover, and keep at a simmer for 15 minutes. Season to taste with salt and pepper, or add more taco seasoning.</li>
-        <li>Serve soup hot with your desired toppings.</li>
-    </ol>
-    <a href="../index.html">Return to Homepage</a>
-</body>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound lean group beef</li>
+            <li>1 Tbsp olive oil</li>
+            <li>1 medium onion, finely diced</li>
+            <li>1/2 red bell pepper, diced</li>
+            <li>1/2 green bell pepper, diced</li>
+            <li>3 garlic cloves, minced</li>
+            <li>2 Tbsp Taco Seasoning</li>
+            <li>16 oz can beans, drained (kidney or pinto)</li>
+            <li>1 cup corn, canned, freshly or frozen</li>
+            <li>1 1/2 cups tomatoes, diced, from about 1 lb fresh tomatoes</li>
+            <li>2 cups beef broth</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Make Taco Seasoning or measure out 2 Tbsp of storebought taco seasoning from 1 packet.</li>
+            <li>In a Dutch oven, heat oil. Once hot, add the ground beef, onion, and bell peppers and saute until the beef is browned, breaking it up with a spatula as you cook. Spoon out any excess fat.</li>
+            <li>Add garlic and Taco Seasoning, and stir for another minute.</li>
+            <li>Add beans, corn, tomatoes, and broth. Bring to a boil then reduce the heat to low, cover, and keep at a simmer for 15 minutes. Season to taste with salt and pepper, or add more taco seasoning.</li>
+            <li>Serve soup hot with your desired toppings.</li>
+        </ol>
+        <a href="../index.html">Return to Homepage</a>
+    </body>
 </html>
