--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/taco-soup.html">Taco Soup</a></li>
-        <li><a href="recipes/cucumber-salad.html">Cucumber Salad</a></li>
-        <li><a href="recipes/mashed-potato.html">Mashed Potatoes</a></li>
-    </ul>
-</body>
+    <head>
+        <link rel="stylesheet" href="styles.css"/>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Odin Recipes</title>
+    </head>
+    <body>
+        <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/taco-soup.html">Taco Soup</a></li>
+            <li><a href="recipes/cucumber-salad.html">Cucumber Salad</a></li>
+            <li><a href="recipes/mashed-potato.html">Mashed Potatoes</a></li>
+        </ul>
+    </body>
 </html>
