Move img styling to external stylesheet

--- a/recipes/cucumber-salad.html
+++ b/recipes/cucumber-salad.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Cucumber Salad</h1>
-        <img src="../images/cucumber-salad-img.jpg" alt="Plate of crispy cucumber salad" height="250"/>
+        <img src="../images/cucumber-salad-img.jpg" alt="Plate of crispy cucumber salad"/>
         <h2>Din Tai Fung Cucumber Salad Recipe</h2>
             <p>This copycat Din Tai Fung Cucumber Salad is bursting with flavor. Beautifully marinated cucumbers drizzled in chili oil is an outstanding vegetarian appetizer you can enjoy for any special occasion! </p>
         <a href="https://www.platingsandpairings.com/din-tai-fung-cucumber-salad-recipe/" target="_blank" rel="noopener noreferrer">Source: Erin with Platings + Pairings</a>
