--- a/recipes/taco-soup.html
+++ b/recipes/taco-soup.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Taco Soup</h1>
-        <img src="../images/taco-soup-img.jpg" alt="Heart bowl of taco soup" height="250"/>
+        <img src="../images/taco-soup-img.jpg" alt="Heart bowl of taco soup"/>
         <h2>The Best Taco Soup Recipe</h2>
         <p>We love all foods Mexican around here. Whether it’s Chicken Fajitas, Fish Tacos, or even Ceviche, Mexican-inspired recipes are always on rotation. 
             This taco soup is a great substitute for Taco Tuesday when you want tacos yet something hot and satisfying</p>
