--- a/recipes/mashed-potato.html
+++ b/recipes/mashed-potato.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Mashed Potatoes</h1>
-        <img src="../images/mashed-potato-img.jpg" alt="Creamy bowl of mashed potatoes, topped with butter" height="250"/>
+        <img src="../images/mashed-potato-img.jpg" alt="Creamy bowl of mashed potatoes, topped with butter"/>
         <h2>The BEST Mashed Potatoes Recipe</h2>
             <p>No holiday meal would be complete without a big bowl of creamy dreamy mashed potatoes. These are the BEST mashed potatoes, incredibly buttery and creamy, easy to make, and the perfect addition to every meal. </p>
 
